--- a/Electrolitos.csproj
+++ b/Electrolitos.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Empleado.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sueldo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
